Fix alignment

--- a/src/Components/Individual/Tasks/Column/Column.css
+++ b/src/Components/Individual/Tasks/Column/Column.css
@@ -27,7 +27,7 @@
     text-align: center;
     width: 10vw;
     height: 4vh;
-    margin: 0 auto;
+    margin-left: 2vw;
 
 }
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap");
